--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 langs:
   - langcode: en
-    lang_string: English Version
+    lang_string: English
+  - langcode: es
+    lang_string: Español
   - langcode: fr-fr
-    lang_string: Version Francaise
+    lang_string: Française
   - langcode: zh-cn
-    lang_string: 简体中文版
+    lang_string: 简体中文
   - langcode: zh-tw
-    lang_string: 繁體中文版
+    lang_string: 繁體中文
