In French, the "c" in "Version Française" takes a cedilla

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ langs:
   - langcode: en
     lang_string: English Version
   - langcode: fr-fr
-    lang_string: Version Francaise
+    lang_string: Version Française
   - langcode: zh-cn
     lang_string: 简体中文版
   - langcode: zh-tw
