--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ langs:
   - langcode: es
     lang_string: Español
   - langcode: fr
-    lang_string: Française
+    lang_string: Français
   - langcode: zh-CN
     lang_string: 简体中文
   - langcode: zh-TW
