Lang string for "French" is "Français"
In previous versions of the site, there was written "Version Française".  Thus
it made sense for the word "Français" to be in its feminine form. Now that the
"Version" part has been dropped, we must switch back to the masculine form of
the word.

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ langs:
   - langcode: es
     lang_string: Español
   - langcode: fr-fr
-    lang_string: Française
+    lang_string: Français
   - langcode: zh-cn
     lang_string: 简体中文
   - langcode: zh-tw
