Fix for language codes and Spanish
http://www.w3.org/International/articles/language-tags/ "The golden rule
when creating language tags is to keep the tag as short as possible.
Avoid region, script or other subtags except where they add useful
distinguishing information."

Closes #18984.

Signed-off-by: Jack Nagel <jacknagel@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ langs:
     lang_string: English
   - langcode: es
     lang_string: Español
-  - langcode: fr-fr
+  - langcode: fr
     lang_string: Française
-  - langcode: zh-cn
+  - langcode: zh-CN
     lang_string: 简体中文
-  - langcode: zh-tw
+  - langcode: zh-TW
     lang_string: 繁體中文
