Fix some errors in the spanish translation
* If a string contains a ":" it must be enclosed in "".
* The langcode must match the html file name

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 langs:
   - langcode: en
     lang_string: English
-  - langcode: es
+  - langcode: es-es
     lang_string: Español
   - langcode: fr-fr
     lang_string: Française
