German translation for home page
Closes #18987.

Signed-off-by: Jack Nagel <jacknagel@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 langs:
   - langcode: en
     lang_string: English
+  - langcode: de
+    lang_string: Deutsch
   - langcode: es
     lang_string: Español
   - langcode: fr
