--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
 before_install:
   - sudo rsync -az "$TRAVIS_BUILD_DIR/" /usr/local/
   - export TRAVIS_BUILD_DIR="/usr/local"
+  - sudo chown -R $USER /usr/local
   - cd /usr/local
   - if [ -f ".git/shallow" ]; then git fetch --unshallow; fi
   - git reset --hard $TRAVIS_COMMIT
